<resources>
    <string name="app_name">ViewPager</string>
    <string name="tab_name_1">ImageView List</string>
    <string name="tab_name_2">Contact List</string>
    <string name="tab_name_3">Email</string>
    <string name="imageDescription">Description</string>
    <string name="textFavouriteButton">Favourite</string>
    <string name="textBackButton">Back</string>
    <string name="receiver_hint">To</string>
    <string name="subject_hint">Subject</string>
    <string name="message_hint">Message</string>
    <string name="button_text">Send</string>
    <string name="textSaveButton">Save</string>
</resources>
