<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/receiverText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/receiver_hint"/>

    <EditText
        android:id="@+id/subjectText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject_hint"/>

    <EditText
        android:id="@+id/messageText"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_margin="0dp"
        android:hint="@string/message_hint"/>

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/button_text"/>

</LinearLayout>